docs: :bulb: update comments

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -1272,7 +1272,7 @@
     }
    ],
    "source": [
-    "# Splitting the siamese model into two parts so the stored feature vectors can be passed to the distance function\n",
+    "# Splitting the siamese model into three parts so the stored feature vectors can be passed to the distance function\n",
     "pred_model = tf.keras.Model(siamese_model.input[1], siamese_model.get_layer('global_average_pooling2d_1').output)\n",
     "pred_model.load_weights('../models/siamese_weights.h5', by_name=True)\n",
     "pred_model.summary()"
