fix(nb): :bug: resolve feature vector performance issue

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -1349,9 +1349,9 @@
     "    for person, feature_vect in dict_.items():\n",
     "        pred = combine_model.predict([vect, feature_vect])\n",
     "        prediction.append(pred)\n",
-    "    check = np.argmax(prediction) if prediction else 0\n",
+    "    check = np.argmin(prediction) if prediction else 0\n",
     "    if prediction:\n",
-    "        if prediction[check] > siamese_threshold:\n",
+    "        if prediction[check] < siamese_threshold:\n",
     "            return vect, check, True\n",
     "        else:\n",
     "            return vect, len(prediction), False\n",
@@ -1424,8 +1424,8 @@
       "At frame 9\n",
       "At frame 10\n",
       "Classifications:\n",
-      "[[0, 1], [0, 0], [0, 1], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 0, 0], [0, 1, 0], [0, 1, 2], [0, 1, 2]]\n",
-      "Time taken for image-image siamese network 7.123086929321289\n",
+      "[[0, 1], [1, 0], [0, 1], [0, 0, 0], [0, 1, 0], [0, 1, 0], [0, 0, 0], [0, 1, 0], [0, 0, 0], [0, 1, 0]]\n",
+      "Time taken for image-image siamese network 19.528198480606079\n",
       "At frame 1\n",
       "At frame 2\n",
       "At frame 3\n",
@@ -1436,7 +1436,7 @@
       "At frame 8\n",
       "At frame 9\n",
       "At frame 10\n",
-      "Time taken for image-featurevector siamese network 10.882670164108276\n"
+      "Time taken for image-featurevector siamese network 11.85351014137268\n"
      ]
     }
    ],
